220. Splitting data into training and validation sets

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -192,12 +192,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oAYMkJOemzy2",
-        "outputId": "cf69f6d5-655d-4a53-a115-aef97a15e94a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "oAYMkJOemzy2",
+        "outputId": "cf69f6d5-655d-4a53-a115-aef97a15e94a"
       },
       "source": [
         "import pandas as pd\n",
@@ -303,12 +303,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uLt6Z1v4qfQF",
-        "outputId": "52240891-b8ae-494a-82d0-21c5471f501d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "uLt6Z1v4qfQF",
+        "outputId": "52240891-b8ae-494a-82d0-21c5471f501d"
       },
       "source": [
         "# Shuffle training dataframe\n",
@@ -413,12 +413,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bwy-5G_BqPvB",
-        "outputId": "5e1ba479-bfb9-4463-a4ed-3b3dbda403bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "bwy-5G_BqPvB",
+        "outputId": "5e1ba479-bfb9-4463-a4ed-3b3dbda403bc"
       },
       "source": [
         "# What does the test dataframe look like ?\n",
@@ -513,18 +513,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hf61kpvLrsuW",
-        "outputId": "3bf8a0c7-da3f-4f5f-b2de-fadcf827a6e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hf61kpvLrsuW",
+        "outputId": "8f1d3ad2-d70d-4185-98b3-4091da0eae98"
       },
       "source": [
         "# How many examples of each class?\n",
         "\n",
         "train_df.target.value_counts()"
       ],
-      "execution_count": 16,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +538,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 24
         }
       ]
     },
@@ -555,11 +555,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Tur_lZTQshxw",
-        "outputId": "44b4543b-6da0-4f58-d2b1-76cda4745310",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Tur_lZTQshxw",
+        "outputId": "44b4543b-6da0-4f58-d2b1-76cda4745310"
       },
       "source": [
         "# How many total samples ?\n",
@@ -584,11 +584,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "09eT8VFitX-d",
-        "outputId": "4e02bfc0-3e90-4b6f-bfdc-de72a3d7de69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "09eT8VFitX-d",
+        "outputId": "4e02bfc0-3e90-4b6f-bfdc-de72a3d7de69"
       },
       "source": [
         "import random\n",
@@ -614,11 +614,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U-ZQLTHQsnBs",
-        "outputId": "5f1a234e-54ca-4d88-b783-6f5bc4d714a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U-ZQLTHQsnBs",
+        "outputId": "99f4e613-ef8e-430a-f617-3e95773de9bd"
       },
       "source": [
         "# Let's visualize some random training examples\n",
@@ -630,38 +630,40 @@
         "  print(f\"Text:\\n{text}\\n\")\n",
         "  print(\"---\\n\")\n"
       ],
-      "execution_count": 23,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Target: 0 (not real disaster)\n",
-            "Text:\n",
-            "Best windows torrent client? was recommended Deluge but it looks like it was written 10 years ago with java swing and 'uses' worse\n",
-            "\n",
-            "---\n",
-            "\n",
             "Target: 1 (real disaster)\n",
             "Text:\n",
-            "California is battling its scariest 2015 wildfire so far. http://t.co/Lec1vmS7x2\n",
-            "\n",
-            "---\n",
-            "\n",
-            "Target: 1 (real disaster)\n",
-            "Text:\n",
-            "mentions of 'theatre +shooting' on Twitter spike 30min prior to $ckec collapse http://t.co/uuBOvy9GQI\n",
+            "SEVERE WEATHER BULLETIN #6\n",
+            "TROPICAL CYCLONE WARNING: TYPHOON 'HANNA' \n",
+            "Issued at 11:00 p.m. Thursday 06 August... http://t.co/FQV47OB8gE\n",
             "\n",
             "---\n",
             "\n",
             "Target: 0 (not real disaster)\n",
             "Text:\n",
-            "trapped in its disappearance\n",
+            "@Furiosoxv stuns also probably won't be anything like AW stuns. And you can't detonate them\n",
             "\n",
             "---\n",
             "\n",
             "Target: 1 (real disaster)\n",
             "Text:\n",
-            "#Saudi Arabia: #Abha: Fatalities reported following suicide bombing at mosque; avoid area http://t.co/1xW0Z8ZeqW\n",
+            "Udhampur terror attack: Militants attack police post 2 SPOs injured: Suspected militants tonight attacked a p... http://t.co/Cwm0ULqu3E\n",
+            "\n",
+            "---\n",
+            "\n",
+            "Target: 0 (not real disaster)\n",
+            "Text:\n",
+            "#hot  Funtenna: hijacking computers to send data as sound waves [Black Hat 2015] http://t.co/cx6auPneMu #prebreak #best\n",
+            "\n",
+            "---\n",
+            "\n",
+            "Target: 0 (not real disaster)\n",
+            "Text:\n",
+            "That usually NEVER happens\n",
             "\n",
             "---\n",
             "\n"
@@ -671,12 +673,116 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "H934OlRdukg2"
       },
       "source": [
-        ""
+        "### Split data into training and validation sets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TNMyMRMk0Dm1"
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UzRBvWJ-0PNk"
+      },
+      "source": [
+        "# Use train_test_split to split training data into training and validation sets\n",
+        "train_sentences, val_sentenences, train_labels, val_labels = train_test_split(train_df_shuffled[\"text\"].to_numpy(),\n",
+        "                                                                              train_df_shuffled[\"target\"].to_numpy(),\n",
+        "                                                                              test_size=0.1, #use 10% of training data for validaton\n",
+        "                                                                              random_state=42)\n",
+        "\n"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kYjqNdh9163z",
+        "outputId": "8596cb50-a8b6-4f6e-f585-fe3a8b0cf1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Check the lengths\n",
+        "len(train_sentences), len(train_labels), len(val_sentenences), len(val_labels)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(6851, 6851, 762, 762)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kbg4re6y2rZR",
+        "outputId": "446d4801-72e7-413d-bbfa-ebdec29090af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the  first 10 samples\n",
+        "train_sentences[:10], train_labels[:10]"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array(['@mogacola @zamtriossu i screamed after hitting tweet',\n",
+              "        'Imagine getting flattened by Kurt Zouma',\n",
+              "        '@Gurmeetramrahim #MSGDoing111WelfareWorks Green S welfare force ke appx 65000 members har time disaster victim ki help ke liye tyar hai....',\n",
+              "        \"@shakjn @C7 @Magnums im shaking in fear he's gonna hack the planet\",\n",
+              "        'Somehow find you and I collide http://t.co/Ee8RpOahPk',\n",
+              "        '@EvaHanderek @MarleyKnysh great times until the bus driver held us hostage in the mall parking lot lmfao',\n",
+              "        'destroy the free fandom honestly',\n",
+              "        'Weapons stolen from National Guard Armory in New Albany still missing #Gunsense http://t.co/lKNU8902JE',\n",
+              "        '@wfaaweather Pete when will the heat wave pass? Is it really going to be mid month? Frisco Boy Scouts have a canoe trip in Okla.',\n",
+              "        'Patient-reported outcomes in long-term survivors of metastatic colorectal cancer - British Journal of Surgery http://t.co/5Yl4DC1Tqt'],\n",
+              "       dtype=object), array([0, 0, 1, 0, 0, 1, 1, 0, 1, 1]))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KRWEIuie4Y0Z"
+      },
+      "source": [
+        "## Word to Vec"
       ],
       "execution_count": null,
       "outputs": []
