222. Setting up a TensorFlow TextVectorization layer to convert text to numbers

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -795,9 +795,162 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "AJW0w-pq9iKu"
+      },
+      "source": [
+        "## Converting text into numbers\n",
+        "\n",
+        "When dealing with a text problem, one of the first things you'll have to do  before you can build a model is to convert your text to numbers.\n",
+        "\n",
+        "There are a few ways to do this, namely :\n",
+        "* Tokenization : direct mapping of token(a token could be a word or character) to number\n",
+        "* Embedding : create a matrix of feature vector for each token(the size of the feature vector can be defined and this embedding can be learned)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f3STaIhI_cSq"
+      },
+      "source": [
+        "### Text vectorization (tokenization)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DJmE_GTf_iBJ",
+        "outputId": "29de281c-a757-465c-c841-7f9bb68db0d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_sentences[:5]"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['@mogacola @zamtriossu i screamed after hitting tweet',\n",
+              "       'Imagine getting flattened by Kurt Zouma',\n",
+              "       '@Gurmeetramrahim #MSGDoing111WelfareWorks Green S welfare force ke appx 65000 members har time disaster victim ki help ke liye tyar hai....',\n",
+              "       \"@shakjn @C7 @Magnums im shaking in fear he's gonna hack the planet\",\n",
+              "       'Somehow find you and I collide http://t.co/Ee8RpOahPk'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O2mZ_tUz_kr6"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.layers.experimental.preprocessing import TextVectorization\n",
+        "# Link to TextVectorization : https://www.tensorflow.org/api_docs/python/tf/keras/layers/experimental/preprocessing/TextVectorization\n",
+        "\n",
+        "# Use the default TextVectorization parameters\n",
+        "text_vectorizer = TextVectorization(max_tokens=None, # how many words in the vocabulary (automatically add <OOV>)\n",
+        "                                    standardize=\"lower_and_strip_punctuation\",\n",
+        "                                    split=\"whitespace\",\n",
+        "                                    ngrams=None, # create group of n-words?\n",
+        "                                    output_mode=\"int\", # how to map tokens to int\n",
+        "                                    output_sequence_length=None, # how long do you want your sequence to be\n",
+        "                                    pad_to_max_tokens = True)\n"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fDs8gSmEDEQ9",
+        "outputId": "b54a1371-6051-46b2-c0bb-97ee81d01900",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "len(train_sentences[0].split())"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mM9ezln0Cy8P",
+        "outputId": "9e46bfae-93aa-4867-cce2-ea27632d0306",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Find the average number of tokens(words) in the training tweets\n",
+        "round(sum([len(i.split()) for i in train_sentences]) / len(train_sentences))"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lGjCmik9DfkD"
+      },
+      "source": [
+        "# Setup text vectorization variables\n",
+        "max_vocab_length= 10000 # max number of words to have in our vocabulary\n",
+        "max_length = 15 # max length  our sequences will be (e.g. how many words from a Tweet does a model see?)\n",
+        "\n",
+        "text_vectorizer = TextVectorization(max_tokens = max_vocab_length,\n",
+        "                                    output_mode =\"int\",\n",
+        "                                    output_sequence_length=max_length)"
+      ],
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E3UgcLjCEJ_N"
       },
       "source": [
         ""
