223. Mapping the TextVectorization layer to text data and turning it into numbers

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -821,11 +821,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DJmE_GTf_iBJ",
-        "outputId": "29de281c-a757-465c-c841-7f9bb68db0d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DJmE_GTf_iBJ",
+        "outputId": "29de281c-a757-465c-c841-7f9bb68db0d7"
       },
       "source": [
         "train_sentences[:5]"
@@ -876,11 +876,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fDs8gSmEDEQ9",
-        "outputId": "b54a1371-6051-46b2-c0bb-97ee81d01900",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fDs8gSmEDEQ9",
+        "outputId": "b54a1371-6051-46b2-c0bb-97ee81d01900"
       },
       "source": [
         "len(train_sentences[0].split())"
@@ -904,11 +904,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mM9ezln0Cy8P",
-        "outputId": "9e46bfae-93aa-4867-cce2-ea27632d0306",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mM9ezln0Cy8P",
+        "outputId": "9e46bfae-93aa-4867-cce2-ea27632d0306"
       },
       "source": [
         "# Find the average number of tokens(words) in the training tweets\n",
@@ -951,6 +951,125 @@
       "cell_type": "code",
       "metadata": {
         "id": "E3UgcLjCEJ_N"
+      },
+      "source": [
+        "# Fit the text vectorizer to training text\n",
+        "text_vectorizer.adapt(train_sentences)"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h6nyOOheFxcY",
+        "outputId": "938870ce-fbeb-4db2-862e-3fc8d6f93482",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create a sample sentence and tokenize it.\n",
+        "sample_sentence = \"There's a flood in my street!\"\n",
+        "text_vectorizer([sample_sentence])"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 15), dtype=int64, numpy=\n",
+              "array([[264,   3, 232,   4,  13, 698,   0,   0,   0,   0,   0,   0,   0,\n",
+              "          0,   0]])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xHrAyiUTGGYy",
+        "outputId": "caf522d9-c068-4797-9e45-1c1627451f0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Choose a random sentence from the training dataset and tokenize it\n",
+        "random_sentence = random.choice(train_sentences)\n",
+        "print(f\"Original text:\\n{random_sentence} \\\n",
+        "        \\n\\nVectorized version:\")\n",
+        "text_vectorizer([random_sentence])"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Original text:\n",
+            "Fire in Pisgah National Forest grows to 375 acres http://t.co/d7zxZ42QW1         \n",
+            "\n",
+            "Vectorized version:\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(1, 15), dtype=int64, numpy=\n",
+              "array([[  42,    4, 3534,  372,  188, 1403,    5, 4178, 1722,    1,    0,\n",
+              "           0,    0,    0,    0]])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IoqGe8G8LUbq",
+        "outputId": "4d59f312-5d48-4295-f85d-69ee55b9c3e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get the unique words in the vocabulary\n",
+        "words_in_vocab = text_vectorizer.get_vocabulary() # get all of the unique words in the training data\n",
+        "top_5_words = words_in_vocab[:5] # get the most common words\n",
+        "bottom_5_words = words_in_vocab[-5:] # get the least common words\n",
+        "print(f\"Number of words in vocab: {len(words_in_vocab)}\")\n",
+        "print(f\"5 most commom words: {top_5_words}\" )\n",
+        "print(f\"5 least commom words:{bottom_5_words}\")"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of words in vocab: 10000\n",
+            "5 most commom words: ['', '[UNK]', 'the', 'a', 'in']\n",
+            "5 least commom words:['pages', 'paeds', 'pads', 'padres', 'paddytomlinson1']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "__cTpzYbGkv5"
       },
       "source": [
         ""
