225. Discussing the various modelling experiments we're going to run

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -1083,11 +1083,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GBwOfJo0fRE4",
-        "outputId": "18747aca-0539-4f0a-93e0-95c897ca1aa3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GBwOfJo0fRE4",
+        "outputId": "18747aca-0539-4f0a-93e0-95c897ca1aa3"
       },
       "source": [
         "from tensorflow.keras import layers\n",
@@ -1118,11 +1118,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q-BizqSohbCe",
-        "outputId": "a2463881-a9dd-41b0-fc3d-499c353d0520",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q-BizqSohbCe",
+        "outputId": "a2463881-a9dd-41b0-fc3d-499c353d0520"
       },
       "source": [
         "# Get a random sentence from the training set \n",
@@ -1176,17 +1176,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HmPF7ElAlAP6",
-        "outputId": "53d58369-90e6-4e52-bfd3-d6bec8481236",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HmPF7ElAlAP6",
+        "outputId": "543ceab1-c90f-407c-af9a-2b95fdf13e42"
       },
       "source": [
         "# Check out a single token's embedding\n",
         "sample_embed[0][0], sample_embed[0][0].shape, random_sentence"
       ],
-      "execution_count": 39,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1226,14 +1226,56 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 41
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0NWA15gGoRNJ"
+      },
+      "source": [
+        "## Modelling a text dataset(running a series of experiments)\n",
+        "\n",
+        "Now we've got a way to turn our text sequence into numbers, it's time to start building a series of modelling experiments.\n",
+        "\n",
+        "We'll start with a baseline and move on from there.\n",
+        "\n",
+        "* Model 0 : Naive Bayes (baseline), this is from SkLearn ML https://scikit-learn.org/stable/tutorial/machine_learning_map/index.html\n",
+        "* Model 1 : Feed-forward neural network(dense model)\n",
+        "* Model 2 : LSTM model (RNN)\n",
+        "* Model 3 : GRU model (RNN)\n",
+        "* Model 4 : Bidirectional-LSTM model (RNN)\n",
+        "* Model 5 : 1D Convolutional Neural Network (CNN)\n",
+        "* Model 6 : TensorFlow Hub Pretrained Feature Extractor (using transfer learning for NLP)\n",
+        "* Model 7 : Same as model 6 with 10% of the training data\n",
+        "\n",
+        "How we are going to approach all of these?\n",
+        "Use the standard steps in modelling with tensorflow :\n",
+        "\n",
+        "* Create a model\n",
+        "* Build a model\n",
+        "* Fit a model\n",
+        "* Evaluate our model\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0NWA15gGoRNJ"
+        "id": "7MW_Jqq8tXrU"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VflQt6WqoqPp"
       },
       "source": [
         ""
