226. Model 0: Building a baseline model to try and improve upon

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -697,13 +697,13 @@
       },
       "source": [
         "# Use train_test_split to split training data into training and validation sets\n",
-        "train_sentences, val_sentenences, train_labels, val_labels = train_test_split(train_df_shuffled[\"text\"].to_numpy(),\n",
+        "train_sentences, val_sentences, train_labels, val_labels = train_test_split(train_df_shuffled[\"text\"].to_numpy(),\n",
         "                                                                              train_df_shuffled[\"target\"].to_numpy(),\n",
         "                                                                              test_size=0.1, #use 10% of training data for validaton\n",
         "                                                                              random_state=42)\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -713,13 +713,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kYjqNdh9163z",
-        "outputId": "4889da75-d739-467c-e73e-c35cfd97fee8"
+        "outputId": "9fcf59ea-1965-4fb2-fd63-8acd3deaae43"
       },
       "source": [
         "#Check the lengths\n",
-        "len(train_sentences), len(train_labels), len(val_sentenences), len(val_labels)"
+        "len(train_sentences), len(train_labels), len(val_sentences), len(val_labels)"
       ],
-      "execution_count": 15,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +731,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 49
         }
       ]
     },
@@ -1262,20 +1262,163 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "7MW_Jqq8tXrU"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "### Model 0 : Getting a baseline\n",
+        "\n",
+        "As with all machine leanring modelling experiments, it's important to create a baseline so you've got a benchmark for future experiments to build upon.\n",
+        "\n",
+        "To create our baseline, we'll use Sklearn's Multinomial Naive Bayes using the TF-IDF formula to convert our words to numbers.\n",
+        "\n",
+        "> **Note** : It's common practice to use non-DL  (Deep Learning) algorithms as a baseline because of their speed and then later using DL to see if you can improve upon them."
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VflQt6WqoqPp"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VflQt6WqoqPp",
+        "outputId": "a251c7ba-2fa8-40b0-c8c6-f4158c486e35"
+      },
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "\n",
+        "# Create tokenization and modelling pipeline\n",
+        "model_0 = Pipeline([\n",
+        "                    (\"tfidf\", TfidfVectorizer()), # covert words to numbers using tfidf\n",
+        "                    (\"clf\", MultinomialNB()) # model the text                    \n",
+        "])\n",
+        "\n",
+        "# Fit the pipeline to the training data\n",
+        "model_0.fit(train_sentences, train_labels)\n"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pipeline(memory=None,\n",
+              "         steps=[('tfidf',\n",
+              "                 TfidfVectorizer(analyzer='word', binary=False,\n",
+              "                                 decode_error='strict',\n",
+              "                                 dtype=<class 'numpy.float64'>,\n",
+              "                                 encoding='utf-8', input='content',\n",
+              "                                 lowercase=True, max_df=1.0, max_features=None,\n",
+              "                                 min_df=1, ngram_range=(1, 1), norm='l2',\n",
+              "                                 preprocessor=None, smooth_idf=True,\n",
+              "                                 stop_words=None, strip_accents=None,\n",
+              "                                 sublinear_tf=False,\n",
+              "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+              "                                 tokenizer=None, use_idf=True,\n",
+              "                                 vocabulary=None)),\n",
+              "                ('clf',\n",
+              "                 MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))],\n",
+              "         verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FTF8ziAjv2bM",
+        "outputId": "a199b81e-b1f1-4d33-fffe-737cfe86446e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate our baseline model\n",
+        "baseline_score = model_0.score(val_sentences, val_labels)\n",
+        "\n",
+        "print(f\"Our baseline model achieves an accuracy of : {baseline_score *100 : .2f}%\")"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Our baseline model achieves an accuracy of :  79.27%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Pds9jVOKwspz",
+        "outputId": "e0283fe4-943f-4c9d-afd6-77cb4f6bcd31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make predictions\n",
+        "baseline_preds = model_0.predict(val_sentences)\n",
+        "baseline_preds[:20]"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6KJ1NVTTxGrz",
+        "outputId": "4dbb48bd-62b0-40d8-d33b-531db497768e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_labels"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 1, ..., 1, 1, 0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fR1PH_7xxIVk"
       },
       "source": [
         ""
