227. Creating a function to track and evaluate our model's results

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -1334,11 +1334,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FTF8ziAjv2bM",
-        "outputId": "a199b81e-b1f1-4d33-fffe-737cfe86446e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FTF8ziAjv2bM",
+        "outputId": "a199b81e-b1f1-4d33-fffe-737cfe86446e"
       },
       "source": [
         "# Evaluate our baseline model\n",
@@ -1360,11 +1360,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Pds9jVOKwspz",
-        "outputId": "e0283fe4-943f-4c9d-afd6-77cb4f6bcd31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Pds9jVOKwspz",
+        "outputId": "e0283fe4-943f-4c9d-afd6-77cb4f6bcd31"
       },
       "source": [
         "# Make predictions\n",
@@ -1390,11 +1390,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6KJ1NVTTxGrz",
-        "outputId": "4dbb48bd-62b0-40d8-d33b-531db497768e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6KJ1NVTTxGrz",
+        "outputId": "4dbb48bd-62b0-40d8-d33b-531db497768e"
       },
       "source": [
         "train_labels"
@@ -1416,15 +1416,88 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "fR1PH_7xxIVk"
       },
       "source": [
-        ""
+        "### Creating an evaluation function for our model experiments\n",
+        "\n",
+        "We could evaluate all of our model's predictions with different metrics every time,however, this will be cumbersome and could easily be fixed with a function\n",
+        "\n",
+        "Let's create one to compare our model's predictions with the truth labels using the following metrics:\n",
+        "* Accuracy\n",
+        "* Precision\n",
+        "* Recall\n",
+        "* F1-score\n",
+        "\n",
+        "For a deep overview of many evaluation methods, please refer the Sklearn documentation :\n",
+        "https://scikit-learn.org/stable/modules/model_evaluation.html"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VYgMJbG-yQ0W"
+      },
+      "source": [
+        "# Function to evaluate accuracy, precision, recall , f1-score\n",
+        "\n",
+        "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
+        "\n",
+        "def calculate_results(y_true, y_pred) :\n",
+        "  \"\"\"\n",
+        "  Calculate model accuracy, precision , recall ad f1-score of a binary classification model.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  # Calculate model accuracy\n",
+        "  model_accuracy = accuracy_score(y_true, y_pred) * 100\n",
+        "  # Calculate model precision, recall and f1-score using \"weighted average\"\n",
+        "  model_precision, model_recall, model_f1, _ = precision_recall_fscore_support(y_true, y_pred, average=\"weighted\")\n",
+        "  model_results = {\"accuracy\" : model_accuracy,\n",
+        "                   \"precision\" : model_precision,\n",
+        "                   \"recall\" : model_recall,\n",
+        "                   \"f1\" : model_f1}\n",
+        "  return model_results\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GSxhqbCz0GWY",
+        "outputId": "8a9d99de-50ca-4ad9-cac0-dff5523a9ec2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Get baseline results\n",
+        "baseline_results = calculate_results(y_true=val_labels, y_pred = baseline_preds)\n",
+        "baseline_results"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 79.26509186351706,\n",
+              " 'f1': 0.7862189758049549,\n",
+              " 'precision': 0.8111390004213173,\n",
+              " 'recall': 0.7926509186351706}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
     }
   ]
 }
