--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -1463,17 +1463,17 @@
         "\n",
         "\n"
       ],
-      "execution_count": 54,
+      "execution_count": 58,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GSxhqbCz0GWY",
-        "outputId": "8a9d99de-50ca-4ad9-cac0-dff5523a9ec2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GSxhqbCz0GWY",
+        "outputId": "8a9d99de-50ca-4ad9-cac0-dff5523a9ec2"
       },
       "source": [
         "# Get baseline results\n",
@@ -1498,6 +1498,40 @@
           "execution_count": 56
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ato9a8-l02tm"
+      },
+      "source": [
+        "# We already created the function to our helper function\n",
+        "#from helper_functions import calculate_results\n"
+      ],
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qjz80jyS09ZE"
+      },
+      "source": [
+        "### Model 1 : A simple dense model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h_lCXUSx1iQ0"
+      },
+      "source": [
+        "from tensorflow.keras import layer\n",
+        "\n",
+        "model_1 = "
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
