--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -55,12 +55,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3FjVZH_blBRM",
-        "outputId": "d14bbed3-d9f5-4aea-b0ed-01939e078d32"
+        "outputId": "75b8e829-cf57-4949-e939-b77f0da87ca1"
       },
       "source": [
         "!nvidia-smi -L"
       ],
-      "execution_count": 2,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -2049,7 +2049,7 @@
         "out_v.close()\n",
         "out_m.close()"
       ],
-      "execution_count": 52,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -2262,9 +2262,287 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "-RhSSvH_cYT6"
+      },
+      "source": [
+        "### Model 2 : LSTM\n",
+        "\n",
+        "LSTM - Long Short Term Memory ( one of the most popular LSTM cells)\n",
+        "\n",
+        "Our structure of an RNN typically looks like this :\n",
+        "\n",
+        "```\n",
+        "Input(text) -> Tokenize -> Embedding -> Layers(RNNs/dense) -> Output (label probability)\n",
+        "```\n",
+        "\n",
+        "Check documentation here : https://www.tensorflow.org/api_docs/python/tf/keras/layers/LSTM\n",
+        "\n",
+        "Tanh Activation functions : https://ml-cheatsheet.readthedocs.io/en/latest/activation_functions.html"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "72uVdNfydzBr"
+      },
+      "source": [
+        "# Create an LSTM model\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "inputs = layers.Input(shape=(1, ), dtype=\"string\")\n",
+        "x = text_vectorizer(inputs)\n",
+        "x = embedding(x)\n",
+        "#print(x.shape)\n",
+        "x = layers.LSTM(units=64, return_sequences=True)(x) # when you're stacking RNN cells together, you need to set return_sequences=True \n",
+        "#print(x.shape)\n",
+        "x = layers.LSTM(64)(x)\n",
+        "#print(x.shape)\n",
+        "x = layers.Dense(64, activation=\"relu\")(x)\n",
+        "#print(x.shape)\n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "model_2 = tf.keras.Model(inputs, outputs, name=\"model_2_LSTM\")\n"
+      ],
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6Z8GuHDQdhqR",
+        "outputId": "0ab01dea-254d-4cb1-b395-a329218b2a06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check model summary\n",
+        "model_2.summary()"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_2_LSTM\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "input_5 (InputLayer)         [(None, 1)]               0         \n",
+            "_________________________________________________________________\n",
+            "text_vectorization_1 (TextVe (None, 15)                0         \n",
+            "_________________________________________________________________\n",
+            "embedding (Embedding)        (None, 15, 128)           1280000   \n",
+            "_________________________________________________________________\n",
+            "lstm_4 (LSTM)                (None, 15, 64)            49408     \n",
+            "_________________________________________________________________\n",
+            "lstm_5 (LSTM)                (None, 64)                33024     \n",
+            "_________________________________________________________________\n",
+            "dense_5 (Dense)              (None, 64)                4160      \n",
+            "_________________________________________________________________\n",
+            "dense_6 (Dense)              (None, 1)                 65        \n",
+            "=================================================================\n",
+            "Total params: 1,366,657\n",
+            "Trainable params: 1,366,657\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VmEIjSkjhp2F"
+      },
+      "source": [
+        "# Compile the model_2\n",
+        "model_2.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n"
+      ],
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Da8tcYcXiQKJ",
+        "outputId": "e9a1f7bf-cef9-47a6-b1cc-6ae6bc2713b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Fit the model\n",
+        "model_2_history = model_2.fit(train_sentences,\n",
+        "                              y = train_labels,\n",
+        "                              epochs=5,\n",
+        "                              validation_data=(val_sentences, val_labels),\n",
+        "                              callbacks=[create_tensorboard_callback(dir_name=SAVE_DIR,\n",
+        "                                                                     experiment_name=\"model_2_LSTM\")])"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving TensorBoard log files to: model_logs/model_2_LSTM/20210805-042141\n",
+            "Epoch 1/5\n",
+            "215/215 [==============================] - 11s 25ms/step - loss: 0.2270 - accuracy: 0.9161 - val_loss: 0.6209 - val_accuracy: 0.7848\n",
+            "Epoch 2/5\n",
+            "215/215 [==============================] - 4s 18ms/step - loss: 0.1579 - accuracy: 0.9400 - val_loss: 0.6280 - val_accuracy: 0.7743\n",
+            "Epoch 3/5\n",
+            "215/215 [==============================] - 4s 18ms/step - loss: 0.1302 - accuracy: 0.9502 - val_loss: 0.8750 - val_accuracy: 0.7782\n",
+            "Epoch 4/5\n",
+            "215/215 [==============================] - 4s 18ms/step - loss: 0.1076 - accuracy: 0.9607 - val_loss: 0.9964 - val_accuracy: 0.7730\n",
+            "Epoch 5/5\n",
+            "215/215 [==============================] - 4s 19ms/step - loss: 0.0887 - accuracy: 0.9651 - val_loss: 1.0099 - val_accuracy: 0.7730\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jh-FPRvVjE66",
+        "outputId": "40044400-77d5-46c6-b73a-4125a82b8c47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make predictions with LSTM model\n",
+        "model_2_pred_probs = model_2.predict(val_sentences)\n",
+        "model_2_pred_probs[:10]"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6.9324367e-02],\n",
+              "       [7.8267759e-01],\n",
+              "       [9.9996781e-01],\n",
+              "       [5.6826834e-02],\n",
+              "       [1.3350655e-04],\n",
+              "       [9.9919087e-01],\n",
+              "       [9.7507828e-01],\n",
+              "       [9.9997199e-01],\n",
+              "       [9.9994433e-01],\n",
+              "       [5.5422354e-01]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MYhY0rlui64E",
+        "outputId": "7c9e0edb-2339-4d96-9e35-a5c13f1ac5aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Convert model 2 pred probs to labels\n",
+        "model_2_preds = tf.squeeze(tf.round(model_2_pred_probs))\n",
+        "model_2_preds[:10]"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=array([0., 1., 1., 0., 0., 1., 1., 1., 1., 1.], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fFjDUmg6jj2j",
+        "outputId": "f32a877d-0ad1-4a8b-dac7-755fe580273d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate model 2 results\n",
+        "model_2_results = calculate_results(y_true = val_labels,\n",
+        "                                    y_pred = model_2_preds)\n",
+        "model_2_results"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 77.29658792650919,\n",
+              " 'f1': 0.7728842723015383,\n",
+              " 'precision': 0.7728267232157443,\n",
+              " 'recall': 0.7729658792650919}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sttis0-bj0VD",
+        "outputId": "aba3e37d-a2be-415e-c331-5effe7069a0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "baseline_results"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 79.26509186351706,\n",
+              " 'f1': 0.7862189758049549,\n",
+              " 'precision': 0.8111390004213173,\n",
+              " 'recall': 0.7926509186351706}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HpwXm7qXkAO2"
       },
       "source": [
         ""
